--- a/src/main/resources/assets/ominous_phantoms/lang/pt_br.json
+++ b/src/main/resources/assets/ominous_phantoms/lang/pt_br.json
@@ -1,4 +1,6 @@
 {
   "effect.ominous_phantoms.night_omen": "Presságio noturno",
-  "subtitles.ominous_phantoms.event.mob_effect.night_omen": "Noite sombria emana"
+  "subtitles.ominous_phantoms.event.mob_effect.night_omen": "Noite sombria emana",
+  "config.ominous_phantoms.phantoms_drop_bones": "Phantoms largam ossos",
+  "config.ominous_phantoms.phantoms_only_attack_afflicted_players": "Phantoms somente atacam jogadores afligidos"
 }
