--- a/src/main/resources/assets/ominous_phantoms/lang/en_us.json
+++ b/src/main/resources/assets/ominous_phantoms/lang/en_us.json
@@ -1,6 +1,7 @@
 {
+  "config.ominous_phantoms.bony_phantoms": "Bony Phantoms",
+  "config.ominous_phantoms.mending_membranes": "Mending Membranes",
+  "config.ominous_phantoms.picky_phantoms": "Picky Phantoms",
   "effect.ominous_phantoms.night_omen": "Night Omen",
-  "subtitles.ominous_phantoms.event.mob_effect.night_omen": "Ominous night looms nearby",
-  "config.ominous_phantoms.phantoms_drop_bones": "Phantoms Drop Bones",
-  "config.ominous_phantoms.phantoms_only_attack_afflicted_players": "Phantoms Only Attack Afflicted Players"
+  "subtitles.ominous_phantoms.event.mob_effect.night_omen": "Ominous night looms nearby"
 }
