--- a/src/main/resources/assets/ominous_phantoms/lang/en_us.json
+++ b/src/main/resources/assets/ominous_phantoms/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "config.ominous_phantoms.bony_phantoms": "Bony Phantoms",
+  "config.ominous_phantoms.dungeon_bottles": "Dungeon Bottles",
   "config.ominous_phantoms.mending_membranes": "Mending Membranes",
   "config.ominous_phantoms.picky_phantoms": "Picky Phantoms",
   "effect.ominous_phantoms.night_omen": "Night Omen",
