--- a/src/main/resources/assets/ominous_phantoms/lang/pt_br.json
+++ b/src/main/resources/assets/ominous_phantoms/lang/pt_br.json
@@ -1,5 +1,6 @@
 {
   "config.ominous_phantoms.bony_phantoms": "Phantoms ósseos",
+  "config.ominous_phantoms.dungeon_bottles": "Frascos em masmorras",
   "config.ominous_phantoms.mending_membranes": "Membranas de remendo",
   "config.ominous_phantoms.picky_phantoms": "Phantoms seletivos",
   "effect.ominous_phantoms.night_omen": "Presságio noturno",
